fix edit flavor icon visibility

--- a/src/applications/settings-transcoding-settings-app/transcoding-profile/transcoding-profile-flavors/transcoding-profile-flavors-table/transcoding-profile-flavors-table.component.scss
+++ b/src/applications/settings-transcoding-settings-app/transcoding-profile/transcoding-profile-flavors/transcoding-profile-flavors-table/transcoding-profile-flavors-table.component.scss
@@ -7,6 +7,7 @@
   padding: 0;
 
   .kEditFlavorIconWrapper {
+    display: none;
     position: relative;
 
     .kEditFlavorIcon {
@@ -42,6 +43,10 @@
 
   tr.ui-state-highlight .kTitle {
     cursor: pointer;
+  }
+
+  tr:hover .kEditFlavorIconWrapper {
+    display: block !important;
   }
 
   .stickyHeader {
